--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,86 @@
   text-align: center;
 }
 
+body{
+  font-family: 'Rubik', sans-serif;
+  
+  padding: 0 16px;
+}
+
+.photo {
+  display: inline-block;
+}
+
+
+img{
+  height: 150px;
+  width: auto;
+}
+
+.profile-img{
+  height: 200px;
+  width: 160px;
+  background-color: #fff;
+
+}
+.polaroid{
+  background-color: #fff;
+  box-shadow: 0 2px 5px #ccc;
+  padding: 10px 10px 30px 10px;
+  width: auto;
+  margin: 16px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  font-family: 'Rubik', sans-serif;
+}
+
+.jumbotron {
+  background-image: url(https://s6.gifyu.com/images/WanderingLightJumbotron-1.png);
+  background-size: auto ;
+  background-repeat: no-repeat;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 50px;
+ 
+ 
+  
+}
+
+.about{
+  background-color: #fff;
+  box-shadow: 0 2px 5px #ccc;
+  margin: 16px;
+  padding: 10px 10px 0px 10px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  font-family: 'Rubik', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +115,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
