--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,12 @@
 
 body{
   font-family: 'Rubik', sans-serif;
-  
   padding: 0 16px;
 }
 
 .photo {
   display: inline-block;
 }
-
 
 img{
   height: 150px;
@@ -24,6 +22,7 @@ img{
   background-color: #fff;
 
 }
+
 .polaroid{
   background-color: #fff;
   box-shadow: 0 2px 5px #ccc;
@@ -36,15 +35,10 @@ img{
   font-family: 'Rubik', sans-serif;
 }
 
-.jumbotron {
-  background-image: url(https://s6.gifyu.com/images/WanderingLightJumbotron-1.png);
-  background-size: auto ;
-  background-repeat: no-repeat;
-  margin-top: 50px;
-  
- 
- 
-  
+.heading {
+   margin-top: 100px;
+   margin-left: 16px;
+   text-align: left;
 }
 
 .about{
